--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Feb 16 18:28:31 ICT 2023
-sdk.dir=/home/abc/Android/Sdk
+#Thu Mar 23 11:21:35 CET 2023
+sdk.dir=/Users/phong/Library/Android/sdk
