--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,8 @@
 
 p6Version = "1.0"
 
+javaVersion = "17"
+
 protocolBufferVersion = "3.19.4"
 kotlinGRPCVersion = "1.2.1"
 grpcVersion = "1.41.0"
@@ -12,6 +14,7 @@ mockitoVersion = "5.2.0"
 apacheCommonTextVersion = "1.10.0"
 apacheCommonCsvVersion = "1.9.0"
 apacheCommonIOVersion = "2.11.0"
+apacheCommonMath = "3.6.1"
 kotestVersion = "5.5.4"
 kotlinVersion = "1.8.0"
 junit4Version = "4.13.2"
@@ -53,6 +56,7 @@ godaddy-composeColorPickerJvm = { module = "com.godaddy.android.colorpicker:comp
 apache-commons-text = { module = "org.apache.commons:commons-text", version.ref = "apacheCommonTextVersion" }
 apache-commons-csv = { module = "org.apache.commons:commons-csv", version.ref = "apacheCommonCsvVersion" }
 apache-commons-io = { module = "commons-io:commons-io", version.ref = "apacheCommonIOVersion" }
+apache-commons-math3 = {module="org.apache.commons:commons-math3", version.ref="apacheCommonMath"}
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version = "1.6.10" }
 rsyntaxtextarea = { module = "com.fifesoft:rsyntaxtextarea", version = "3.2.0" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutineVersion" }
